workspace = { members = [
    "practice",
    "abc313",
    "abc359",
    "abc358",
    "abc357",
    "abc356",
    "abc355",
    "abc354",
    "abc353",
    "abc001",
    "abc002",
    "abc003",
    "abc004",
    "abc005",
    "abc006", "abc008", "abc009", "abc010", "abc042", "abc011", "abc043",
], exclude = [
] }
[package]
name = "ABC"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
